clang/test/BSC/Negative/Ownership/RuleCheck/endscope-and-block/endscope-and-block.cbs
// RUN: %clang_cc1 -verify %s

void func1() {
    int num = 1;
    int * _Owned a;
    a = (int * _Owned)&num;
} // expected-error {{memory leak of value: `a`}}

void func2(int * _Owned a) {
    {
        int * p = (int *)a;
    }
}

void func3(int * _Owned a) {
    {
        int * p = (int *)a;
    }
    {
        int * _Owned q = (int * _Owned)a; // expected-error {{use of moved value: `a`}}
    } // expected-error {{memory leak of value: `q`}}
}

void func4(int * _Owned a) {
    {
        int * p = (int *)a;
        {
            int * _Owned q = (int * _Owned)p;
        } // expected-error {{memory leak of value: `q`}}
    }
}

void func5(int * _Owned a) {
    {
        int *p = (int *)a;
        {
            int * _Owned q = (int * _Owned)p;
            {}
        } // expected-error {{memory leak of value: `q`}}
    }
}